# gain-camera

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  camera_live_view.py  camera_server.py  connection.py  gain_connection.py  live_view.py  main_window.py  parameters.py  pyproject.toml  test_client.py  test_server.py  test_trigger.py  utils.py
communication/: client.py  remote_parameters.py  server.py  utils.py
config/: camera1  camera2
gain_camera/: camera_server.py  connection.py  live_view.py  parameters.py
gain_camera/communication/: client.py  remote_parameters.py  server.py  utils.py
gain_camera/config/: camera0
gain_camera/ui/: record_background_box.py
mot_viewer/cam/: cam.py  tisgrabber.py
ui/: atom_number_widget.py  camera_widget.py  configure_recording_box.py  crop_box_widget.py  main_window.py  main_window.ui  record_background_box.py  select_exposure_time.py  widgets.py
