[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gain-camera"
description = "Camera viewer for viewing MOT"
authors = [
    { name = "Bastian Leykauf" },
    { email = "leykauf@physik.hu-berlin.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyqtgraph",
    "numpy",
    "msgpack",
    "msgpack_numpy",
    "PyQt5",
    "matplotlib",
    "rpyc",
    "plumbum",
]
dynamic = ["version"]
[project.optional-dependencies]
dev = [
    "black>=22.8.0",
    "pre-commit>=2.20.0",
    "flake8>=5.0.4",
    "rope>=1.3.0",
    "isort>=5.10.1",
    "Flake8-pyproject>=1.1.0.post0",
    "setuptools_scm>=6.2",
]

[project.urls]
homepage = "https://github.com/bleykauf/gain-camera/"
repository = "https://github.com/bleykauf/gain/camera/"

[tool.setuptools_scm]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
